--- a/3_celulare.css
+++ b/3_celulare.css
@@ -151,13 +151,13 @@ nav a:hover{
 
 @media (max-width:950px)
 {
-    .placa_celular{
+    .celular{
         display: block;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 100px;
     }
-    .placa_celular1{
+    .celular1{
         display: block;
         margin-left: auto;
         margin-right: auto;
